homeassistant/homeassistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
spec:
  type: ClusterIP
  selector:
    app: homeassistant
  ports:
    - port: 8123
      targetPort: http
      protocol: TCP
      name: http
