homeassistant/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  ports:
    - name: https
      port: 5678
      targetPort: 5678
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-service-1
  labels:
    kubernetes.io/service-name: external-service
addressType: IPv4
ports:
  - name: ''
    appProtocol: http
    protocol: TCP
    port: 5678
endpoints:
  - addresses:
      - "10.0.40.1"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: service.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-service
                port:
                  number: 5678
